@@ -1,0 +1,13 @@
+pluginName = VIDYA
+
+!include( ../../../plugin.config ){
+  message( "Oops -- No custom build options specified" ) 
+} 
+
+HEADERS += VIDYA.h
+
+SOURCES += VIDYA.cpp
+
+target.path = /usr/lib/qtstalker/indicator
+INSTALLS += target
+
